--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 supabase_version=2.3.1
+ktor_version=2.3.10
+kotlin_version=1.9.23
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
